<resources>
    <string name="app_name">Todo</string>
    <string name="welcome">Welcome to Todo list</string>
    <string name="login_header">Please sign in</string>
    <string name="register_header">Account creation</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_2">Retype password</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="submit">Submit</string>
    <string name="create_account">Create account</string>
    <string name="todo_list_header">Hello, %1$s here are your todos</string>
    <string name="created_on">Created on:\n%1$s</string>
    <string name="last_updated_on">Last updated on:\n%1$s</string>
    <string name="add_todo">Add todo</string>
    <string name="title">Title</string>
    <string name="deadline">Deadline</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="new_todo">New todo</string>
    <string name="description">Description</string>
    <string name="add_task">Add Task</string>
    <string name="remove_task">Remove task</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_dialog_text">Are you sure you want to delete this Todo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="io_error">Could not reach server, check your internet connection.</string>
    <string name="error">Unknown error</string>
    <string name="description_error">The description cannot be blank</string>
    <string name="empty_tasks_error">At lease one task is needed</string>
    <string name="todo_title_error">The title cannot be blank</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="author">Author: Kevin Rothenbühler-Alarcon</string>
    <string name="back">Back</string>
    <string name="password_mismatch_error">The passwords does not match</string>
    <string name="email_empty_error">The email cannot be empty</string>
    <string name="email_validity_error">The email is not valid</string>
    <string name="email">Email</string>
    <string name="password_requirement">
        Password must at least contain:\n
        - 8 characters\n
        - 1 number\n
        - 1 capital letter\n
        - 1 special character
    </string>
    <string name="password_pattern_error">The password is does not have to correct pattern</string>
</resources>