package ch.kra.todo.core

object TestTags {
    const val API_ERROR = "API_ERROR"
    const val USERNAME_ERROR = "USERNAME_ERROR"
    const val PASSWORD_ERROR = "PASSWORD_ERROR"
    const val REPEATED_PASSWORD_ERROR = "REPEATED_PASSWORD_ERROR"
    const val EMAIL_ERROR = "EMAIL_ERROR"

    const val TODO_LIST = "TODO_LIST"

    const val CONNECTED_USER = "CONNECTED_USER"
    const val HEADER_TITLE = "HEADER_TITLE"

    const val TASK_CONTENT = "TASK_CONTENT"
}